[gd_scene load_steps=8 format=3 uid="uid://dncka8qduvu3a"]

[ext_resource type="Script" path="res://scenes/menus/pause_menu/pause_menu.gd" id="1_kb4pw"]
[ext_resource type="Shader" path="res://pause_menu.gdshader" id="2_lsslf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tgche"]
shader = ExtResource("2_lsslf")
shader_parameter/lod = 0.0

[sub_resource type="Theme" id="Theme_rf7fg"]

[sub_resource type="Animation" id="Animation_8g5vh"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_6kbth"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3slhv"]
_data = {
"RESET": SubResource("Animation_6kbth"),
"blur": SubResource("Animation_8g5vh")
}

[node name="PauseMenu" type="Control"]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kb4pw")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_tgche")
layout_mode = 0
offset_left = -1.0
offset_top = -4.0
offset_right = 796.0
offset_bottom = 553.0
theme = SubResource("Theme_rf7fg")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Pause" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MainMenu" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3slhv")
}

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
